자식 클래스로 CPlayer / CEnemy 부모 클래스로 CObject 둬서 상속화 작성하기 (다형성 - 오버라이딩/다운캐스팅을 안 해서 빌드 오류남)

--- a/TextRPG.vcxproj
+++ b/TextRPG.vcxproj
@@ -29,6 +29,7 @@
       </ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="_Scripts\NPC\NPC.cpp" />
+    <ClCompile Include="_Scripts\Object\Object.cpp" />
     <ClCompile Include="_Scripts\Player\Player.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -41,6 +42,7 @@
       </ExcludedFromBuild>
     </ClInclude>
     <ClInclude Include="_Scripts\NPC\NPC.h" />
+    <ClInclude Include="_Scripts\Object\Object.h" />
     <ClInclude Include="_Scripts\_pch.h" />
     <ClInclude Include="_Scripts\Player\Player.h" />
     <ClInclude Include="_Scripts\_stdafx.h" />
