상점 리스트 구현

--- a/TextRPG.vcxproj
+++ b/TextRPG.vcxproj
@@ -31,6 +31,7 @@
     <ClCompile Include="_Scripts\NPC\NPC.cpp" />
     <ClCompile Include="_Scripts\Object\Object.cpp" />
     <ClCompile Include="_Scripts\Player\Player.cpp" />
+    <ClCompile Include="_Scripts\Shop\Shop.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="_Scripts\Enemy\BattleField.h" />
@@ -43,6 +44,7 @@
     </ClInclude>
     <ClInclude Include="_Scripts\NPC\NPC.h" />
     <ClInclude Include="_Scripts\Object\Object.h" />
+    <ClInclude Include="_Scripts\Shop\Shop.h" />
     <ClInclude Include="_Scripts\_pch.h" />
     <ClInclude Include="_Scripts\Player\Player.h" />
     <ClInclude Include="_Scripts\_stdafx.h" />
